--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/hanson/Documents/projects_py/.tradinganalysis/bin/python"
+    "python.pythonPath": "C:\\Users\\Hanson\\Documents\\projects\\virtualenv\\tradinganalysis\\Scripts\\python.exe"
 }
